--- a/SwiftSerinette/SwiftSerinette/Base.lproj/Main.storyboard
+++ b/SwiftSerinette/SwiftSerinette/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,72 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67O-tS-9J3">
+                                <rect key="frame" x="339" y="20" width="241" height="145"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="241" id="iNb-vz-jX2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <state key="normal" title="Button 1"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="LNj-Yf-snC"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBB-Jj-lsZ">
+                                <rect key="frame" x="339" y="165" width="241" height="145"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <state key="normal" title="Button 2"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="r5s-eB-AiF"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzf-vJ-hay">
+                                <rect key="frame" x="339" y="310" width="241" height="145"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <state key="normal" title="Button 3"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="vc6-OJ-mUX"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0W-3W-uAu">
+                                <rect key="frame" x="339" y="455" width="241" height="145"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
+                                <state key="normal" title="Button 4"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="GiV-CZ-b92"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Z0W-3W-uAu" firstAttribute="top" secondItem="hzf-vJ-hay" secondAttribute="bottom" id="1yV-bN-OCE"/>
+                            <constraint firstItem="hzf-vJ-hay" firstAttribute="height" secondItem="67O-tS-9J3" secondAttribute="height" id="5te-Vw-6Xb"/>
+                            <constraint firstItem="hzf-vJ-hay" firstAttribute="top" secondItem="yBB-Jj-lsZ" secondAttribute="bottom" id="8EQ-nq-WPA"/>
+                            <constraint firstItem="Z0W-3W-uAu" firstAttribute="trailing" secondItem="67O-tS-9J3" secondAttribute="trailing" id="Bsd-LO-KEE"/>
+                            <constraint firstItem="Z0W-3W-uAu" firstAttribute="height" secondItem="67O-tS-9J3" secondAttribute="height" id="Cpu-GS-4b1"/>
+                            <constraint firstItem="67O-tS-9J3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="H6q-Us-tPb"/>
+                            <constraint firstItem="yBB-Jj-lsZ" firstAttribute="width" secondItem="67O-tS-9J3" secondAttribute="width" id="TKS-Xm-UfG"/>
+                            <constraint firstItem="yBB-Jj-lsZ" firstAttribute="top" secondItem="67O-tS-9J3" secondAttribute="bottom" id="Uez-Wq-oo7"/>
+                            <constraint firstItem="hzf-vJ-hay" firstAttribute="width" secondItem="67O-tS-9J3" secondAttribute="width" id="WgJ-SZ-UaN"/>
+                            <constraint firstItem="yBB-Jj-lsZ" firstAttribute="trailing" secondItem="67O-tS-9J3" secondAttribute="trailing" id="Xds-s8-SIS"/>
+                            <constraint firstItem="yBB-Jj-lsZ" firstAttribute="height" secondItem="67O-tS-9J3" secondAttribute="height" id="d2C-tN-NjR"/>
+                            <constraint firstItem="67O-tS-9J3" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="hki-OZ-gxE"/>
+                            <constraint firstItem="hzf-vJ-hay" firstAttribute="trailing" secondItem="67O-tS-9J3" secondAttribute="trailing" id="uip-bA-cte"/>
+                            <constraint firstItem="Z0W-3W-uAu" firstAttribute="width" secondItem="67O-tS-9J3" secondAttribute="width" id="xSU-NC-gam"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Z0W-3W-uAu" secondAttribute="bottom" id="y7A-iB-yve"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outletCollection property="buttons" destination="Z0W-3W-uAu" collectionClass="NSMutableArray" id="tF1-D8-5R2"/>
+                        <outletCollection property="buttons" destination="67O-tS-9J3" collectionClass="NSMutableArray" id="deH-5A-sty"/>
+                        <outletCollection property="buttons" destination="yBB-Jj-lsZ" collectionClass="NSMutableArray" id="Wiv-8L-Q2s"/>
+                        <outletCollection property="buttons" destination="hzf-vJ-hay" collectionClass="NSMutableArray" id="dan-RQ-jI4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="487" y="387"/>
         </scene>
     </scenes>
 </document>
