--- a/SwiftSerinette/SwiftSerinette/Base.lproj/Main.storyboard
+++ b/SwiftSerinette/SwiftSerinette/Base.lproj/Main.storyboard
@@ -18,8 +18,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67O-tS-9J3">
+                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="67O-tS-9J3" customClass="SquishyButton" customModule="SwiftSerinette" customModuleProvider="target">
                                 <rect key="frame" x="339" y="20" width="241" height="145"/>
+                                <color key="backgroundColor" red="0.98594671487808228" green="0.0" blue="0.039444990456104279" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="241" id="iNb-vz-jX2"/>
                                 </constraints>
@@ -29,24 +30,27 @@
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="LNj-Yf-snC"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBB-Jj-lsZ">
+                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBB-Jj-lsZ" customClass="SquishyButton" customModule="SwiftSerinette" customModuleProvider="target">
                                 <rect key="frame" x="339" y="165" width="241" height="145"/>
+                                <color key="backgroundColor" red="0.17659315466880798" green="1" blue="0.025383301079273224" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <state key="normal" title="Button 2"/>
                                 <connections>
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="r5s-eB-AiF"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzf-vJ-hay">
+                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hzf-vJ-hay" customClass="SquishyButton" customModule="SwiftSerinette" customModuleProvider="target">
                                 <rect key="frame" x="339" y="310" width="241" height="145"/>
+                                <color key="backgroundColor" red="0.99216222763061523" green="0.60768502950668335" blue="0.034358769655227661" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <state key="normal" title="Button 3"/>
                                 <connections>
                                     <action selector="buttonPressed:" destination="BYZ-38-t0r" eventType="touchDown" id="vc6-OJ-mUX"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0W-3W-uAu">
+                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z0W-3W-uAu" customClass="SquishyButton" customModule="SwiftSerinette" customModuleProvider="target">
                                 <rect key="frame" x="339" y="455" width="241" height="145"/>
+                                <color key="backgroundColor" red="0.13645859062671661" green="0.0" blue="0.99821770191192627" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <state key="normal" title="Button 4"/>
                                 <connections>
@@ -54,7 +58,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Z0W-3W-uAu" firstAttribute="top" secondItem="hzf-vJ-hay" secondAttribute="bottom" id="1yV-bN-OCE"/>
                             <constraint firstItem="hzf-vJ-hay" firstAttribute="height" secondItem="67O-tS-9J3" secondAttribute="height" id="5te-Vw-6Xb"/>
